[gd_scene load_steps=7 format=3 uid="uid://b46fjjxng2sxc"]

[ext_resource type="Texture2D" uid="uid://b7jx1ncoft614" path="res://kenney_space-shooter-redux/PNG/Meteors/meteorGrey_big4.png" id="1_p45ip"]
[ext_resource type="Script" path="res://scripts/Enemies/Meteor/meteor.gd" id="1_ybnab"]
[ext_resource type="PackedScene" uid="uid://cvimvj0644pi6" path="res://scenes/Enemies/Components/e_health_component.tscn" id="3_h3qte"]
[ext_resource type="PackedScene" uid="uid://c0d1mipjimv7p" path="res://scenes/Enemies/Components/e_movement_component.tscn" id="4_6sgyw"]
[ext_resource type="PackedScene" uid="uid://dpa2cinwc8km0" path="res://scenes/Enemies/Components/e_ai.tscn" id="5_18ean"]

[sub_resource type="CircleShape2D" id="CircleShape2D_oriex"]
radius = 42.4264

[node name="Meteor" type="Area2D"]
collision_layer = 4
collision_mask = 10
script = ExtResource("1_ybnab")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_p45ip")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_oriex")

[node name="E_AI" parent="." instance=ExtResource("5_18ean")]

[node name="E_HealthComponent" parent="." instance=ExtResource("3_h3qte")]

[node name="E_MovementComponent" parent="." instance=ExtResource("4_6sgyw")]
